--- a/webpage/index.html
+++ b/webpage/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-  <a href="#" class="logo">ZENITH</a>
+  <a href="#" class="logo">NUPUR</a>
   <div class="nav-links">
     <a href="#">Products</a>
     <a href="#">Enterprise</a>
